# multiviewer

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: developer-guide.md  for-codex.md  multiviewer-specification.md  remote-control-user-guide.md  specification.md  todo.md  window-layouts.md
githooks/: pre-commit
remote-control/: MV-Activate-TV.shortcut  MV-Add-Window.shortcut  MV-Back.shortcut  MV-Deactivate-TV.shortcut  MV-Demote-Window.shortcut  MV-Do-Command.shortcut  MV-Down.shortcut  MV-Home.shortcut  MV-Left.shortcut  MV-Mute.shortcut  MV-Play-Pause.shortcut  MV-Power.shortcut  MV-Remote.shortcut  MV-Remove-Window.shortcut  MV-Right.shortcut  MV-Screensaver.shortcut  MV-Select.shortcut  MV-Toggle-Submode.shortcut  MV-Up.shortcut  MV-Volume-Down.shortcut  MV-Volume-Up.shortcut
src/multiviewer/: __init__.py  aio.py  aio.pyi  atv.py  atv.pyi  base.py  base.pyi  check_fsm_summary.py  config.py  explore_fsm.py  http_server.py  http_server.pyi  ip2sl.py  ip2sl.pyi  json_field.py  json_field.pyi  jtech.py  jtech.pyi  jtech_manager.py  jtech_manager.pyi  jtech_output.py  jtech_output.pyi  jtech_screen.py  jtech_screen.pyi  mv.py  mv.pyi  mv_screen.py  mv_screen.pyi  mv_screen_fsm-summary.json  mv_screen_fsm.py  mv_screen_fsm.pyi  mv_screen_state.py  mvd.py  mvd.pyi  py.typed  pyatv.conf  start_mvd.py  stop_mvd.py  tv.py  tv.pyi  (+4 more)
tests/: tests.py  tests.pyi
