[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiviewer"
version = "0.1.0"
description = "Multiviewer remote control"
requires-python = ">=3.11"
dependencies = [
    "dataclasses-json",
    "pyatv",
    "pyright[nodejs]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
