[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiviewer"
version = "0.1.0"
description = "Multiviewer remote control"
requires-python = ">=3.11"
dependencies = [
    "black",
    "dataclasses-json",
    "mdformat~=0.7.18",
    "pyatv",
    "pyright[nodejs]",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 90

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (incl. unused)
    "I",   # import conventions
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    # Star imports are intentional; base.py defines __all__.
    "F403",
    "F405",
    # Keep one-line debug toggles like `if False: debug_print()`.
    "E701",
]

[tool.black]
line-length = 90
target-version = ["py311"]
